--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         h2{
             text-align: center;
             color: blue;
-            font-size: 100px;
+            font-size: 60px;
         }
 
         h3{
@@ -28,7 +28,7 @@
         }
 
         header a {
-            font-size: 100px;
+            font-size: 40px;
             color: yellowgreen;
             margin: 0 15px;
             transition: color 0.3s ease;
@@ -65,12 +65,12 @@
     </header>
     <h1>INI ADALAH HALAMAN HOME</h1>
     <h2>Clayton/8A/08</h2>
-    <img src="Screenshot 2025-06-08 201422.png"width="1000"height="1000">
+    <img src="Screenshot 2025-06-08 201422.png"width="400"height="400">
     <ul>
         <h3>Hobby</h3>
-        <li>He's the strongest of all time</li>
-        <li>He's the hope of the universe</li>
-        <li>He is super saiyan</li>
+        <li>Swimming</li>
+        <li>Playing games</li>
+        <li>Fighting</li>
     </ul>
 </body>
 </html>
